# UtilityLibs

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Libraries/: CMakeLists.txt
Libraries/LoggerLib/: CMakeLists.txt  README.md
Libraries/LoggerLib/Docs/: LoggerLibHistory.md  LoggerLibInfo.md  LoggerLibReleaseNotes.md  LoggerLibRoadmap.odg
Libraries/LoggerLib/Docs/CSS/: ReleaseNotes.css
Libraries/LoggerLib/LoggerLib/: CMakeLists.txt
Libraries/LoggerLib/LoggerLib/Console/: CMakeLists.txt  main.cpp
Libraries/LoggerLib/LoggerLib/LoggerLib/: CMakeLists.txt  LogDataStore.cpp  LogDataStore.hpp  LogMng.cpp  LogMng.hpp  Logger.cpp  Logger.hpp  LoggerCommonDataTypes.cpp  LoggerCommonDataTypes.hpp  LoggerDateTime.cpp  LoggerDateTime.hpp  LoggerException.cpp  LoggerException.hpp  LoggerExperimental.hpp  LoggerInfoFormatter.cpp  LoggerInfoFormatter.hpp  LoggerLib.hpp  LoggerLibDef.hpp  LoggerLibVersion.hpp  LoggerLibVersionTools.cpp  LoggerLibVersionTools.hpp  pch.h
Libraries/LoggerLib/LoggerLibSolution/: LoggerLibSolution.sln
Libraries/LoggerLib/LoggerLibSolution/Logger/: Logger.cpp  Logger.hpp  Logger.vcxproj  Logger.vcxproj.filters  LoggerCommonDataTypes.cpp  LoggerCommonDataTypes.hpp  LoggerDateTime.cpp  LoggerLibDef.hpp  pch.h
Libraries/SettingsLib/: CMakeLists.txt  LICENSE.txt  README.md  settings_for_test.ini
Libraries/SettingsLib/Docs/: SettingsLibHistory.md  SettingsLibInfo.md
Libraries/SettingsLib/SettingsLib/: CMakeLists.txt
Libraries/SettingsLib/SettingsLib/Console/: CMakeLists.txt  debug.cpp  debug.hpp  main.cpp  test.cpp  test.hpp
Libraries/SettingsLib/SettingsLib/SettingsLib/: CMakeLists.txt  ConfigFileStream.cpp  ConfigFileStream.hpp  SettingsIniConfig.cpp  SettingsIniConfig.hpp  SettingsIniConfigData.cpp  SettingsIniConfigData.hpp  SettingsIniDefinitions.hpp  SettingsIniErrorCodes.hpp  SettingsIniTools.cpp  SettingsIniTools.hpp  SettingsLib.cpp  SettingsLib.hpp  SettingsLibConfig.cpp  SettingsLibConfig.hpp  SettingsLibConfigData.hpp  SettingsLibConfigDataW.hpp  SettingsLibConfigFileStream.cpp  SettingsLibConfigFileStream.hpp  SettingsLibDataTypes.cpp  SettingsLibDataTypes.hpp  SettingsLibDefinitions.hpp  SettingsLibErrorCodes.hpp  SettingsLibExperimentalFeatures.hpp  SettingsLibTools.cpp  SettingsLibTools.hpp  SettingsLibVersion.hpp  SettingsLibVersionHelper.cpp  SettingsLibVersionHelper.hpp  dllmain.cpp
Libraries/SettingsLib/SettingsLib/SettingsLib/Components/Configs/Ini/: SettingsIniConfig.cpp  SettingsIniConfig.hpp  SettingsIniConfigData.cpp  SettingsIniConfigData.hpp  SettingsIniDefinitions.hpp  SettingsIniErrorCodes.hpp  SettingsIniTools.cpp  SettingsIniTools.hpp
Libraries/SettingsLib/SettingsLib/SettingsLib/Components/Exceptions/: SettingsLibException.cpp  SettingsLibException.hpp
Libraries/SettingsLib/SettingsLibSolution/: SettingsLibSolution.sln
Libraries/SettingsLib/SettingsLibSolution/SettingsLib/: SettingsLib.cpp  SettingsLib.hpp  SettingsLib.vcxproj  SettingsLib.vcxproj.filters  SettingsLibCommonDataTypes.hpp  SettingsLibCommonDefines.hpp  SettingsLibConfigData.cpp  SettingsLibConfigData.hpp  SettingsLibConfigDataW.cpp  SettingsLibConfigDataW.hpp  SettingsLibDef.hpp  SettingsLibMng.hpp  SettingsLibProperties.hpp  SettingsLibTools.cpp  SettingsLibTools.hpp  pch.h
Libraries/SettingsLib/SettingsLibSolution/SettingsLibCpp_Console/: SettingsLibCpp_Console.vcxproj  main.cpp
Libraries/SettingsLib/SettingsLibSolution/Settings_ConsoleTest/: Settings_ConsoleTest.vcxproj  main.cpp
Libraries/VersionLib/: CMakeLists.txt
Libraries/VersionLib/VersionLib/: CMakeLists.txt  LICENSE.txt  README.md
Libraries/VersionLib/VersionLib/C_Console/: CMakeLists.txt  main.c
Libraries/VersionLib/VersionLib/Console/: CMakeLists.txt  formatTests.cpp  formatTests.hpp  main.cpp
Libraries/VersionLib/VersionLib/Docs/: CompleteFormula4FinalWeightRelease_Wt.odf  GenericFormula_WeightRelease.odf  Project Info.md  Project Version History.md  SpecificFormula2PureTypes_WeightRelease.odf  TechnicalInformation.md  TodoList.ods  VersionLib-TodoList.ods  VersionLibComponentsDiagram.odg  VersionLibDiagrams.odg  VersionLibInfo.md  VersionLibReleases.md  VersionLibRoadmap.odg  VersionReleaseWeightCalc.py
Libraries/VersionLib/VersionLib/VersionLib/: BuildMetadata.cpp  BuildMetadata.hpp  BuildReleaseId.cpp  BuildReleaseId.hpp  BuildTypes.cpp  BuildTypes.h  BuildTypes.hpp  BuildTypesExt.cpp  BuildTypesExt.hpp  CMakeLists.txt  CommonTools.cpp  CommonTools.hpp  DataTransaction.h  DataTransaction.hpp  ExceptionComponents.hpp  ExperimentalFeatures.h  ExperimentalFeatures.hpp  InternalVersion.cpp  InternalVersion.hpp  ReleaseTools.cpp  ReleaseTools.hpp  SemVerClass.cpp  SemVerClass.hpp  TokenClassifier.cpp  TokenClassifier.hpp  TokenDictionaries.cpp  TokenDictionaries.hpp  TokenMapper.cpp  TokenMapper.hpp  Tools.cpp  Tools.hpp  VersionBase.hpp  VersionClass.cpp  VersionClass.hpp  VersionData.cpp  VersionLib.h  VersionLib.hpp  VersionLibVersionInfo.h  VersionLibVersionInfo.hpp  VersionStruct.cpp  (+8 more)
Libraries/VersionLib/VersionLib/VersionLib/Dictionaries/: SemVerDict.cpp  SemVerDict.hpp
Libraries/VersionLib/VersionLib/VersionLib/Formats/: SemVerClass.cpp  SemVerClass.hpp  VersionData.cpp  VersionData.hpp
Libraries/VersionLib/VersionLib/VersionLib/Mappers/: SemVerMap.cpp  SemVerMap.hpp
