###########################################################
#
# CMakeLists: Libraries
#
###########################################################

cmake_minimum_required(VERSION 3.28)

###########################################################
#
# Sub projects:
#
###########################################################

#add_subdirectory("SettingsLib")
add_subdirectory("LoggerLib")
#add_subdirectory("VersionLib")