###########################################################
#
# CMakeLists: SettingsLib Root
#
###########################################################

cmake_minimum_required(VERSION 3.28)

###########################################################
#
# Sub projects:
#
###########################################################

add_subdirectory("SettingsLib")